# Nutricionista

./: .env.example  .gitignore  .vercelignore  CLAUDE_CODE_INSTRUCTIONS.md  DEPLOYMENT.md  ICONS_README.txt  README.md  RESUMEN_EJECUTIVO.md  admin.html  database.json  index.html  manifest.json  nutricionista2  package-lock.json  package.json  server.js  service-worker.js  test_database.html  vercel.json
.github/workflows/: actualizar_bd.yml
api/: admin.js  auth.js  fatsecret.js  fatsecret_anterior.js  judge.js  rerank.js
api/microservice/: [...path].js
docs/: CASOS_REALES.md  CHECKLIST_CLIENTE.md  DEPLOY_MICROSERVICIO.md  MANUAL_CLIENTE.md  RESUMEN_CLIENTE.md  SCHEMA.md
js/: algorithm.js  exchange_groups.js
microservicio/: .env.example  Dockerfile  README.md  _judge_prompt.py  judge.py  judge_cache.py  main.py  pyproject.toml  railway.json
microservicio/data/: index.json  meta.json
scripts/: _audit_prompt.py  _label_prompt.py  actualizar.sh  apply_audit_fixes.py  audit_condiments.py  audit_data.py  audit_macros_with_llm.py  bulk_label_foods.py  consolidate_fruit_veg.py  dedupe_basicos.py  embed_foods.py  export_review_csv.py  fill_subgroups.py  fix_categories.py  fix_data_quality_pass1.py  fix_flags.py  fix_fruits.py  fix_other_protein.py  fix_prepared.py  fix_sweets.py  flag_meat_residuals_prepared.py  import_review_csv.py  minify_db.py  refine_subgroups_carbs.py  refine_subgroups_dairy.py  refine_subgroups_fat.py  refine_subgroups_protein.py  requirements.txt  run_pipeline.sh  smoke_test_db.py  test_intercambios.py
