[project]
name = "microservicio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.0",
    "fastapi>=0.136.1",
    "openai>=1.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.46.0",
    # NOTE: sentence-transformers + numpy removed for Railway deploy size.
    # Re-add to restore the /rerank semantic endpoint. See main.py header.
]
